<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".triangle_area.TriangleAreaFragment">

    <ImageView
        android:id="@+id/imageViewTriangleArea"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/triangle_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/triangle_area"
        android:contentDescription="@string/reference_area_image" />

    <EditText
        android:id="@+id/editTextTriangleBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/triangle_base_edittext"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTriangleAreaImage" />

    <EditText
        android:id="@+id/editTextHeightBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/triangle_height_edittext"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTriangleBase" />

    <Button
        android:id="@+id/btnCalculateTriangleArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeightBase" />

    <TextView
        android:id="@+id/tvResultTriangleArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateTriangleArea" />

    <TextView
        android:id="@+id/tvTriangleAreaImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/reference_area_image"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewTriangleArea"
        app:layout_constraintStart_toStartOf="@+id/imageViewTriangleArea"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTriangleArea" />

</androidx.constraintlayout.widget.ConstraintLayout>